# Codex

./: .claude_project_cache.json  .codex-thoughts-initialized  .gitignore  .gitmodules  =3.6  AGENTS.md  Accounts.md  CHANGES.md  Change1.md  Makefile  TODO.terminal.md  hook-input-debug.json  mcp-ui.md  requirements-docsearch.txt  test  todo.machine.md  todo.md
codex-rs/: Cargo.toml  todo.completed.machine.md  todo.machine.md
codex-rs/apply-patch/: Cargo.toml  apply_patch_tool_instructions.md
codex-rs/apply-patch/src/: cli.rs  history.rs  interactive.rs  lib.rs  standalone_executable.rs
codex-rs/apply-patch/tests/suite/: cli.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: audit_cmd.rs  doc_cmd.rs  login.rs  main.rs  mcp_cmd.rs  memory_cmd.rs  orchestrator_cmd.rs  pipeline_cmd.rs  proto.rs  stellar_cmd.rs
codex-rs/cli/src/mcp/: cli.rs  mod.rs  signing.rs  wizard.rs
codex-rs/cli/tests/: audit_export.rs  mcp_list.rs  mcp_wizard.rs
codex-rs/core/: Cargo.toml  prompt.md
codex-rs/core/benches/: resilience_prefetch.rs
codex-rs/core/src/: apply_patch.rs  auth.rs  auth_backup.rs  client.rs  codex.rs  codex_conversation.rs  config.rs  config_profile.rs  config_types.rs  conversation_manager.rs  exec.rs  features.rs  landlock.rs  lib.rs  message_history.rs  openai_tools.rs  plan_tool.rs  process_death.rs  seatbelt.rs  spawn.rs  telemetry.rs  telemetry_exporter.rs
codex-rs/core/src/codex/: compact.rs
codex-rs/core/src/config/migrations/: mcp.rs
codex-rs/core/src/exec_command/: control.rs  exec_command_params.rs  exec_command_session.rs  mod.rs  responses_api.rs  session_id.rs  session_manager.rs
codex-rs/core/src/features/: legacy.rs
codex-rs/core/src/mcp/: mod.rs  registry.rs  templates.rs
codex-rs/core/src/mcp/intake/: cache.rs  detectors.rs  engine.rs  fingerprint_store.rs  mod.rs  parser.rs  policy.rs  preview.rs  reason_codes.json  reason_codes.rs  state.rs
codex-rs/core/src/orchestrator/: mod.rs
codex-rs/core/src/pipeline/: mod.rs
codex-rs/core/src/resilience/: cache.rs  confidence.rs  conflict.rs  metrics.rs  mod.rs  prefetch.rs  transport.rs
codex-rs/core/src/rollout/: policy.rs
codex-rs/core/src/security/: mod.rs
codex-rs/core/src/state/: service.rs
codex-rs/core/src/stellar/: action.rs  event.rs  guard.rs  mod.rs  persona.rs  rbac.rs  snapshot.rs  state.rs  tests.rs
codex-rs/core/src/tools/: spec.rs
codex-rs/core/src/tools/handlers/: exec_stream.rs  unified_exec.rs
codex-rs/core/src/unified_exec/: errors.rs  mod.rs
codex-rs/core/templates/compact/: history_bridge.md  prompt.md
codex-rs/core/tests/: resilience_chaos.rs
codex-rs/core/tests/common/: lib.rs
codex-rs/core/tests/suite/: client.rs  compact.rs  compact_resume_fork.rs  prompt_caching.rs  rmcp_client.rs  shell_serialization.rs  tool_harness.rs  unified_exec.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/exec/tests/suite/: apply_patch.rs  approve_all.rs
codex-rs/fixtures/mcp/node-basic/: package.json  server.js
codex-rs/fixtures/mcp/python-basic/: main.py  pyproject.toml
codex-rs/gui/: Cargo.toml
codex-rs/gui/src/: lib.rs  main.rs
codex-rs/gui/src/backend/: codex.rs  mod.rs
codex-rs/gui/src/runtime/: mod.rs
codex-rs/gui/src/ui/: mod.rs
codex-rs/gui/tests/: smoke.rs
codex-rs/login/src/: server.rs
codex-rs/login/tests/suite/: login_server_e2e.rs
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_runner.rs
codex-rs/mcp-server/tests/suite/: codex_tool.rs  login.rs  user_info.rs
codex-rs/protocol/bindings/: ExecCommandPayload.ts  ExecCommandStatus.ts  ExecControlActionPayload.ts  ExecControlRequest.ts  ExecPatternMatchPayload.ts  ExecSessionLifecycle.ts  ExecSessionUpdateKind.ts
codex-rs/protocol/src/: num_format.rs  protocol.rs
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  file_explorer.rs  history_cell.rs  lib.rs  process_manager.rs  progressive_disclosure.rs  status_bar.rs  ui_consts.rs
codex-rs/tui/src/bottom_pane/: bottom_pane_view.rs  chat_composer.rs  footer.rs  mod.rs  textarea.rs
codex-rs/tui/src/chatwidget/: tests.rs
codex-rs/tui/src/mcp/: file_browser.rs  manager_view.rs  mod.rs  types.rs  wizard_view.rs
codex-rs/tui/src/snapshots/: codex_tui__file_explorer__tests__file_explorer_widget_basic.snap  codex_tui__process_manager__tests__process_manager_empty.snap  codex_tui__process_manager__tests__process_manager_populated.snap  codex_tui__process_manager__tests__process_output_view_basic.snap  codex_tui__process_manager__tests__process_output_view_truncated.snap  file_explorer__tests__widget_renders_basic_tree.snap
codex-rs/tui/src/stellar/: controller.rs  keymap.rs  mod.rs  tests.rs  view.rs
codex-rs/tui/tests/: all.rs
codex-rs/tui/tests/accessibility/: mod.rs  stellar_core_smoke.rs
codex-rs/tui/tests/fixtures/: binary-size-log.jsonl
codex-rs/tui/tests/suite/: mod.rs  overlay_investigate_flow.rs
docs/: EmbeddingGemma-300M-context-ru.txt  codex-gui.md  config.md  getting-started.md  install.md  stellar-quickstart.md
docs/.docsearch/: index.jsonl
docs/future/: MaxThink-Stellar.md  index.md  stellar-tui-vision.md
docs/future/stellar/: alignment.md  backlog.md  chaos-log-20250918.md  definition-of-done.md  m1-core-plan.md  m2-resilience-plan.md  m3-security-plan.md  m3-security-validation.md  metrics-baseline.md  review-log.md  rfc-adr-template.md
docs/future/stellar/adrs/: adr-core-001.md  adr-del-001.md  adr-res-001.md  adr-sec-001.md
docs/rfcs/: 0001-mcp-management-overhaul.md  0002-stellar-core-kernel.md  0003-stellar-resilience.md  0004-stellar-security.md  0005-stellar-delivery.md
enhancex/: README.md
enhancex/docs/: sync.md
enhancex/overlays/: series
enhancex/scripts/: apply_overlays.sh  test_begin_patch.sh
enhancex/submodules/: README.md
scripts/chaos/: README.md  resilience_loop.sh
scripts/docsearch/: __init__.py  common.py  index.py  memory.py  query.py
scripts/docsearch/tests/: test_chunking.py
tests/: README.md  run_apply_patch_demo.sh  sample_patch.patch
(+22 files in other folders)
