[package]
edition = "2024"
name = "codex-core"
version = { workspace = true }

[lib]
name = "codex_core"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
askama = "0.12"
async-channel = "2.3.1"
base64 = "0.22"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
codex-apply-patch = { path = "../apply-patch" }
codex-file-search = { path = "../file-search" }
codex-mcp-client = { path = "../mcp-client" }
codex-protocol = { path = "../protocol" }
ed25519-dalek = { version = "2", features = ["std"] }
dirs = "6"
env-flags = "0.1.1"
eventsource-stream = "0.2.3"
fastrand = "2.1"
futures = "0.3"
fs2 = "0.4.3"
libc = "0.2.175"
mcp-types = { path = "../mcp-types" }
os_info = "3.12.0"
portable-pty = "0.9.0"
rand = "0.9"
sled = "0.34"
chacha20poly1305 = { version = "0.10", features = ["std"] }
bincode = "1"
regex-lite = "0.1.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
prometheus = { version = "0.13", default-features = false, features = ["protobuf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1.0.23"
sha2 = "0.10"
hex = "0.4"
sha1 = "0.10.6"
shlex = "1.3.0"
similar = "2.7.0"
strum_macros = "0.27.2"
tar = "0.4.41"
tempfile = "3"
thiserror = "2.0.16"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset", "macros"] }
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = "0.7.16"
toml = "0.9.5"
toml_edit = "0.23.4"
tracing = { version = "0.1.41", features = ["log"] }
tree-sitter = "0.25.9"
tree-sitter-bash = "0.25.0"
uuid = { version = "1", features = ["serde", "v4"] }
which = "6"
wildmatch = "2.5.0"
walkdir = "2.5.0"
once_cell = "1"


[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.1"
seccompiler = "0.5.0"

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2"
core_test_support = { path = "tests/common" }
maplit = "1.0.2"
predicates = "3"
pretty_assertions = "1.4.1"
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
criterion = { version = "0.5", features = ["cargo_bench_support", "html_reports"] }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]

[[bench]]
name = "resilience_prefetch"
harness = false
