[package]
name = "codex-gui"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_gui"
path = "src/lib.rs"

[[bin]]
name = "codex-gui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
codex-core = { path = "../core" }
codex-common = { path = "../common" }
default-env = "0.1.1"
eframe = { version = "0.28", default-features = false, features = ["glow"] }
egui = "0.28"
eyre = "0.6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
crossbeam-channel = "0.5"
time = { version = "0.3", features = ["formatting"] }
